--- a/procrastination/main.css
+++ b/procrastination/main.css
@@ -108,7 +108,27 @@ body {
 /*loading*/
 #loading {
 	visibility: visible;
-	
+	border: 6px solid #B6CDFB; 
+	border-top: 6px solid #4383FF; 
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+	animation: spin 0.8s linear infinite;
+	-webkit-animation: spin 0.8s linear infinite; /* Safari */
+	position: absolute;
+	top:50%;
+	left: 50%;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
 }
 
 #content {
