--- a/procrastination/main.css
+++ b/procrastination/main.css
@@ -30,6 +30,32 @@ body {
 	background-position: center;
 }
 
+#written-message {
+	position: absolute;
+	left: 70em;
+	top: 25em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+}
+
+@media (max-width: 1800px) {
+	#written-message {
+	position: absolute;
+	left: 60em;
+	top: 25em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+}
+
+}
+
+@media (max-width: 1650px) {
+	#written-message {
+	position: absolute;
+	left: 40em;
+	top: 25em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+}
+	
+}
 
 /* calendar */
 .calendar {
@@ -44,6 +70,166 @@ body {
 	overflow: auto;
 	background-color: white;
 }
+
+
+@media (max-width: 1350px) {
+	#written-message {
+	position: absolute;
+	left: 32em;
+	top: 25em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+}
+	.calendar {
+		left: 5em;
+	}
+}
+
+@media (max-width: 1200px) {
+	#written-message {
+	position: absolute;
+	left: 30em;
+	top: 25em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+	width: 50%;
+}
+	.calendar {
+		left: 4em;
+		width: 200px;
+		height: 400px;
+	}
+}
+
+@media (max-width: 1100px) {
+	#written-message {
+	position: absolute;
+	left: 27em;
+	top: 25em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+}
+	.calendar {
+		left: 3em;
+	}
+}
+
+@media (max-width: 1000px) {
+	#first-page {
+		height: 700px;
+	}
+	#written-message {
+	position: absolute;
+	left: 22em;
+	top: 12em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+	width: 490px;
+}
+	.calendar {
+		top: 7em;
+		left: 3em;
+	}
+}
+
+@media (max-width: 850px) {
+	#written-message {
+	position: absolute;
+	left: 20em;
+	top: 12em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+	width: 490px;
+}
+	.calendar {
+		top: 7em;
+		left: 3em;
+	}
+}
+@media (max-width: 800px) {
+	#first-page {
+		height: 700px;
+	}
+
+	#written-message {
+	position: absolute;
+	left: 7em;
+	top: 29em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+	width: 490px;
+}
+	.calendar {
+		top: 2.5em;
+		left: 19em;
+	}
+}
+
+@media (max-width: 700px) {
+	#first-page {
+		height: 700px;
+	}
+
+	#written-message {
+	position: absolute;
+	left: 4em;
+	top: 29em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+	width: 490px;
+}
+	.calendar {
+		top: 2.5em;
+		left: 12em;
+	}
+}
+
+@media (max-width: 600px) {
+	#first-page {
+		height: 800px;
+	}
+
+	#written-message {
+	position: absolute;
+	left: 4em;
+	top: 1em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+	width: 490px;
+}
+	.calendar {
+		top: 15em;
+		left: 12em;
+	}
+}
+@media (max-width: 570px) {
+	#first-page {
+		height: 800px;
+	}
+
+	#written-message {
+	position: absolute;
+	left: 2em;
+	top: 1em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+	width: 490px;
+}
+	.calendar {
+		top: 15em;
+		left: 10em;
+	}
+}
+
+@media (max-width: 550px) {
+	#first-page {
+		height: 800px;
+	}
+
+	#written-message {
+	position: absolute;
+	left: 2em;
+	top: 1em;
+	box-shadow: 0 0 4em 1em rgba(0, 0, 0, 0.6);
+	width: 400px;
+}
+	.calendar {
+		top: 15em;
+		left: 8em;
+	}
+}
+
 
 .to_the_right {
 	padding-right: 40px;
