--- a/procrastination/main.css
+++ b/procrastination/main.css
@@ -887,12 +887,13 @@ body {
 
  .cat-photo {
  	margin: 0;
+	margin-top: 8em;
  	position: relative;
 
  }
 
  .cat-photo img {
-	 max-width: 100%;
+	max-width: 100%;
 	height: auto;
  	display: block;
  }
@@ -907,8 +908,9 @@ body {
 	background: rgba(0,0,0,0.6); 
 	padding-bottom: 2em;
 	text-align: center;
-		box-sizing: border-box; 
+    box-sizing: border-box; 
 	transition: all ease-in-out 250ms;
+	font-size: 1.3em;
  }
 
  .photo-description p {
@@ -946,7 +948,7 @@ body {
 	border-width: 2px;
 	border-style: solid;
 	padding: 0.5em 1.75em;
-	font-size: .7rem;
+	font-size: .8rem;
 	font-weight: 700;
 	color: #4881FF;
 	border-color: #4881FF;
@@ -957,4 +959,53 @@ body {
 .button:focus {
 	background:#4881FF;
 	color:#232323;
+}
+
+@media (max-width: 1930px) {
+	#third-page {
+		height: 960px;
+	}
+
+@media (max-width: 1200px) {
+	#third-page {
+		top: 450px;
+		height: 700px;
+	}
+	
+	.cat-photo {
+		margin-top: 3em;
+	}
+	.photo-description {
+		font-size: 1em;
+	}
+	
+	.deceptive {
+		font-size: 4em;
+	}
+	
+	.button {
+	font-size: .7rem;
+}
+
+	
+}
+
+@media (max-width: 1100px) {
+	#third-page {
+		top: 300px;
+		height: 600px;
+	}
+	.cat-photo {
+		margin-top: 0em;
+	}
+}
+
+@media (max-width: 800px) {
+	#third-page {
+		top: 600px;
+		height: 600px;
+	}
+	.cat-photo { 
+		margin-top: 0;
+	}
 }
