--- a/procrastination/main.css
+++ b/procrastination/main.css
@@ -1032,4 +1032,38 @@ body {
 
 #dr-photo {
 	border-radius: 50%;
+	margin-top: 3em;
+	margin-left: 10em;
+}
+
+#quotation-mark {
+	position: absolute;
+	font-size: 15em;
+	top: -0.1em;
+	left: 2em;
+}
+
+#quote {
+	font-size: 4em;
+	margin-top: 2em;
+	margin-left: 2em;
+	font-family: Helvetica;
+	width: 15em;
+	text-indent: 1.3em;
+}
+
+#citation {
+	font-size: 2em; 
+	margin-top: 0; 
+	margin-left: 25em;
+	font-family: Ageo;
+}
+
+#citat-line {
+	border-bottom: double;
+	border-bottom-width: 0.2em;
+	position: absolute;
+	width: 550px;
+	left: 13em;
+	top: 42.5em;
 }
